--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>CoffeeScript WebGL ARP Signing Avatar: vhg.2020</title>
+<title>Test Site NGT Thesis Signing Avatar</title>
 
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
@@ -20,8 +20,8 @@
 <body onload="CWASA.init();">
 
 <!--================================================================-->
-<h3>CoffeeScript WebGL ARP Signing Avatar with Animgen via JASigning: vhg.2020</h3>
-<h4>GUI composed of bespoke elements</h4>
+<h3>Test Site NGT Thesis Signing Avatar</h3>
+<h4>Lukt nog niet helemaal</h4>
 <hr/>
 
 <table align="center" >
