--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/tech/jas/vhg2020 -->
 
-<link rel="stylesheet"
-    href="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/cwasa.css" />
+<link rel="stylesheet" type="text/css"
+    href="cwasa.css" />
 <script type="text/javascript"
-    src="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/allcsa.js"></script>
+    src="allcsa.js"></script>
 
 </head>
 
@@ -21,7 +21,7 @@
 
 <!--================================================================-->
 <h3>Test Site NGT Thesis Signing Avatar</h3>
-<h4>Lukt nog niet helemaal</h4>
+<h4>Lukt nog niet helemaal, hopelijk nu wel?</h4>
 <hr/>
 
 <table align="center" >
