--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css"
     href="cwasa.css" />
 <script type="text/javascript"
-    src="allcsa.js"></script>
+    src="https://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/allcsa.js"></script>
 
 </head>
 
@@ -21,7 +21,7 @@
 
 <!--================================================================-->
 <h3>Test Site NGT Thesis Signing Avatar</h3>
-<h4>Lukt nog niet helemaal, hopelijk nu wel?</h4>
+<h4>Lukt nog niet helemaal, nu wel?</h4>
 <hr/>
 
 <table align="center" >
