--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- CWA @ vhg.cmp.uea.ac.uk/tech/jas/vhg2020 -->
 
 <link rel="stylesheet" type="text/css"
-    href="cwasa.css" />
+    href="https://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/cwasa.css" />
 <script type="text/javascript"
     src="https://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/allcsa.js"></script>
 
@@ -21,7 +21,7 @@
 
 <!--================================================================-->
 <h3>Test Site NGT Thesis Signing Avatar</h3>
-<h4>Lukt nog niet helemaal, nu wel?</h4>
+<h4>Lukt nog niet helemaal, en nu?</h4>
 <hr/>
 
 <table align="center" >
