zo werkt css wel

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- CWA @ vhg.cmp.uea.ac.uk/tech/jas/vhg2020 -->
 
 <link rel="stylesheet" type="text/css"
-    href="https://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/cwasa.css" />
+    href="cwasa.css" />
 <script type="text/javascript"
     src="https://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/allcsa.js"></script>
 
