--- a/index.html
+++ b/index.html
@@ -167,11 +167,13 @@ Status:
 </table>
 
 <hr/>
-This example shows how individual elements of the GUI can be created directly.
+This site is largely taken from: http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/OneAvClientTest.html. Credits to John Glauert and the JASigning team.
 <p>
-The avatar panel is generated automatically, but other buttons and fields are provided explicitly. The class name on each element identifies the type of element and the number of the avatar. Multiple instances of buttons and output fields can be used, but input fields such as the SiGML URL or SiGML Text should occur only once for a given avatar.
+To use the avatar, enter the text you would like to translate in the "Dutch" text bar. If you would like each word to be fingerspelled, check the box below the input box. Click on "Play NGT Translation" to see how your Dutch sentence translates to NGT!
 <p>
-Below is second copy of the avatar menu, the frame count, and status line to illustrate duplicated elements.
+You can suspend the animation and then move through it frame by frame to see it better, or you can change the speed it is played in above.
+
+<!--
 <p align="center">
 <span class="CWASAAvMenu av0" ></span><input class="txtSF av0" value="0/0" type="text">
 <br/>
@@ -182,6 +184,7 @@ Below is second copy of the avatar menu, the frame count, and status line to ill
 </textarea>
 
 <div class="undisplayed">
+-->
 <!-- Animgen FPS -->
 <!--
 Let the Javascript initialisation set the selected FPS value, which should
