--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ SiGML Text:<br>
 <br>
 
 <!-- Avatar/Play/Stop BUTTONS -->
-<input type="checkbox" id="fingerspelling" name="fingerspelling" value="fingerspelling"><label for="fingerspelling"> Fingerspell each word?</label><br>
-<input type="button" value="Play SiGML Text" class="bttnPlaySiGMLText av0" />
+<input type="checkbox" id="fingerspelling" name="fingerspelling" value="fingerspelling"><label for="fingerspelling"> Fingerspell each word</label><br>
+<input type="button" value="Play NGT Translation" class="bttnPlaySiGMLText av0" />
 &nbsp;
 <input type="button" value="Stop" class="bttnStop av0" />
 
