--- a/index.html
+++ b/index.html
@@ -71,56 +71,16 @@ Speed (log<sub>2</sub> scale):
 
 <hr/>
 
-<!-- SiGML URL -->
+<!-- SiGML URL
 SiGML URL:<br>
 <input class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
 
 <br>
+-->
 
 <!-- SiGML Text -->
-SiGML Text:<br>
-<textarea class="txtaSiGMLText av0" rows="4" >
-<?xml version="1.0" encoding="utf-8"?>
-<sigml>
-
-<hns_sign gloss="mug">
-  <hamnosys_nonmanual>
-    <hnm_mouthpicture picture="mVg"/>
-  </hamnosys_nonmanual>
-  <hamnosys_manual>
-    <hamfist/> <hamthumbacrossmod/>
-        <hamextfingerol/> <hampalml/>
-    <hamshoulders/>
-    <hamparbegin/> <hammoveu/> <hamarcu/>
-        <hamreplace/> <hamextfingerul/> <hampalmdl/>
-    <hamparend/>
-  </hamnosys_manual>
-</hns_sign>
-
-<hns_sign gloss="take">
-  <hamnosys_nonmanual>
-    <hnm_mouthpicture picture="te_Ik"/>
-  </hamnosys_nonmanual>
-  <hamnosys_manual>
-    <hamceeall/> <hamextfingerol/> <hampalml/>
-    <hamlrbeside/> <hamshoulders/> <hamarmextended/>
-    <hamreplace/> <hamextfingerl/> <hampalml/>
-    <hamchest/> <hamclose/>
-  </hamnosys_manual>
-</hns_sign>
-
-<hns_sign gloss="i">
-  <hamnosys_nonmanual>
-    <hnm_mouthpicture picture="a_I"/>
-  </hamnosys_nonmanual>
-  <hamnosys_manual>
-    <hamfinger2/> <hamthumbacrossmod/>
-    <hamextfingeril/> <hampalmr/>
-    <hamchest/> <hamtouch/>
-  </hamnosys_manual>
-</hns_sign>
-
-</sigml>
+Dutch Text:<br>
+<textarea class="txtaSiGMLText av0" rows="2" >
 </textarea>
 
 <br>
@@ -192,6 +152,7 @@ match that specified in the applet's "animgen.fps" parameter (above).
 The duplicated information in the value attributes is needed for IE 6,
 which doesn't follow the spec.
 -->
+<!--
 FPS:&nbsp;
 <select class="fpsmenu" >
 	<option value="10">10</option>
@@ -203,10 +164,12 @@ FPS:&nbsp;
 </select>
 
 <br><br>
+-->
 
 <!-- Logging checkbox -->
 <!-- initial setting ("checked") should match that of the applet argument
      "do.spa.logging" -->
+<!--
 SPA Logging:&nbsp;
 <input type="checkbox" value="Log" class="chkLog" />
 <br>
@@ -215,7 +178,9 @@ Log Dropped Frames:&nbsp;
 
 <br><br>
 
-</div> <!--class="undisplayed"-->
+</div>
+-->
+<!--class="undisplayed"-->
 
 <!-- Hidden SToCA applet element panel -->
 <!--================================================================-->
