--- a/index.html
+++ b/index.html
@@ -3,193 +3,151 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Test Site NGT Thesis Signing Avatar</title>
+<title>NGT Thesis Test Website</title>
 
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
 
-<!-- CWA @ vhg.cmp.uea.ac.uk/tech/jas/vhg2020 -->
-
-<link rel="stylesheet" type="text/css"
-    href="cwasa.css" />
+<!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
+<link rel="stylesheet"
+    href="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/cwasa.css" />
 <script type="text/javascript"
     src="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/allcsa.js"></script>
+
+<script language="javascript">
+
+function playURL(surl) {
+	CWASA.playSiGMLURL(surl);
+}
+
+function playText(stext) {
+	CWASA.playSiGMLText(stext);
+}
+
+function addStatus(evt) {
+	var elt = document.getElementById("myStatusLog");
+	var msg = evt.msg;
+	if (evt.av != "*") {
+		msg = "[av" + evt.av + "] " + msg;
+	}
+	elt.value = elt.value + msg + "\n";
+}
+CWASA.addHook("status", addStatus);
+
+var lggr = CWASA.getLogger("CWASA", "trace");
+
+function setFPS(evt) {
+	var elt = document.getElementById("myFPS");
+	elt.value = evt.msg.toFixed(2);
+}
+CWASA.addHook("avatarfps", setFPS, 0);
+
+function setSignFrame(evt) {
+	var msg = evt.msg;
+	var elt = document.getElementById("mySF");
+	elt.value = (msg.s+1)+"/"+(msg.f+1);
+	elt = document.getElementById("myGloss");
+	elt.value = msg.g;
+}
+CWASA.addHook("avatarsign", setSignFrame, 0);
+
+</script>
 
 </head>
 
 <body onload="CWASA.init();">
 
 <!--================================================================-->
-<h3>Test Site NGT Thesis Signing Avatar</h3>
-<h4>Lukt nog niet helemaal, en nu?</h4>
+<h3>CoffeeScript WebGL ARP Signing Avatar with Animgen via JASigning: vhg.2020</h3>
+<h4>Test direct access to CWASA</h4>
 <hr/>
 
-<table align="center" >
-<tr>
-
-<td align="left" valign="center" width="250" height="280" >
-	<!-- CWA signing avatar 0 -->
-	<div class="CWASAAvatar av0" align="center" ></div>
-</td>
-
-<td></td>
-
-<td align="center" valign="center">
-
+<!-- CWA signing avatar panel 0 -->
 <!--================================================================-->
-<!-- Bespoke signing avatar GUI 0 -->
+<div class="CWASAPanel av0" align="center" ></div>
 <!--================================================================-->
-
-<div class="divCtrlPanel">
-
-<!-- Avatar Menu -->
-Avatar:
-<select class="menuAv av0">
-<option value="anna">anna</option>
-<option value="beatrice">beatrice</option>
-<option value="candy">candy</option>
-<option value="darshan">darshan</option>
-<option value="francoise">francoise</option>
-<option value="genie">genie</option>
-<option value="luna" selected="selected">luna</option>
-<option value="marc">marc</option>
-<option value="max">max</option>
-<option value="monkey">monkey</option>
-<option value="otis">otis</option>
-<option value="robotboy">robotboy</option>
-<option value="siggi">siggi</option>
-</select>
-<br/>
-
-<!-- Speed Buttons -->
-Speed (log<sub>2</sub> scale):
-<input class="txtLogSpeed av0" value="+1.0" type="text" />
-
-<input type="button" value="-" class="bttnSpeedDown av0" />
-<input type="button" value="+" class="bttnSpeedUp av0" />
-<input type="button" value="Reset" class="bttnSpeedReset av0" />
-
 <hr/>
-
-<!-- SiGML URL
-SiGML URL:<br>
-<input class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
-
-<br>
--->
-
-<!-- SiGML Text -->
-Dutch Text:<br>
-<textarea class="txtaSiGMLText av0" rows="2" >
-</textarea>
-
-<br>
-
-<!-- Avatar/Play/Stop BUTTONS -->
-<input type="checkbox" id="fingerspelling" name="fingerspelling" value="fingerspelling"><label for="fingerspelling"> Fingerspell each word</label><br>
-<input type="button" value="Play NGT Translation" class="bttnPlaySiGMLText av0" />
-&nbsp;
-<input type="button" value="Stop" class="bttnStop av0" />
-
-<br>
-
-<input value="Suspend" class="bttnSuspend av0" type="button">
-<input value="Resume" class="bttnResume av0" type="button">
-&nbsp;
-Frames:
-<input value="+1" class="bttnNextF av0" type="button">
-<input value="-1" class="bttnPrevF av0" type="button">
-
+<p align="center">
+<span class="CWASAProgress av0"></span>
 <hr/>
-
-<!-- Progress and Status -->
-
+<p align="center">
 <span style="font-size: 90%;" >
 Sign/Frame:
-<input class="txtSF av0" value="0/0" type="text">
+<input id="mySF" class="txtSF" value="0/0" type="text" />
 &nbsp;
 Gloss:
-<input class="txtGloss av0" value="[none]" type="text">
+<input id="myGloss" class="txtGloss" value="[none]" type="text" />
 &nbsp;
 FPS:
-<input class="txtFPS av0" value="00.00" type="text" />
-<br/>
-
-Status:
-<input type="text" class="statusExtra av0" />
+<input id="myFPS" class="txtFPS" value="00.00" type="text" />
 </span>
-
-</div>
-<!--================================================================-->
-
-</td>
-</tr>
-</table>
-
 <hr/>
-This site is largely taken from: http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/OneAvClientTest.html. Credits to John Glauert and the JASigning team.
-<p>
-To use the avatar, enter the text you would like to translate in the "Dutch" text bar. If you would like each word to be fingerspelled, check the box below the input box. Click on "Play NGT Translation" to see how your Dutch sentence translates to NGT!
-<p>
-You can suspend the animation and then move through it frame by frame to see it better, or you can change the speed it is played in above.
 
 <!--
-<p align="center">
-<span class="CWASAAvMenu av0" ></span><input class="txtSF av0" value="0/0" type="text">
-<br/>
-<input type="text" class="statusExtra av0" />
+<div align="center">
+New Text: <input type="button" value="doText" onclick='playText(document.getElementById("mySiGML").value);' /><br>
+<textarea id="mySiGML" class="txtaSiGMLText" rows="6" >
+<?xml version="1.0" encoding="utf-8"?>
+<sigml>
 
-<hr/>
-<textarea id="JSONText" class="txtaSiGMLText" rows="6" >
+<hns_sign gloss="mug">
+  <hamnosys_nonmanual>
+    <hnm_mouthpicture picture="mVg"/>
+  </hamnosys_nonmanual>
+  <hamnosys_manual>
+    <hamfist/> <hamthumbacrossmod/>
+        <hamextfingerol/> <hampalml/>
+    <hamshoulders/>
+    <hamparbegin/> <hammoveu/> <hamarcu/>
+        <hamreplace/> <hamextfingerul/> <hampalmdl/>
+    <hamparend/>
+  </hamnosys_manual>
+</hns_sign>
+
+<hns_sign gloss="take">
+  <hamnosys_nonmanual>
+    <hnm_mouthpicture picture="te_Ik"/>
+  </hamnosys_nonmanual>
+  <hamnosys_manual>
+    <hamceeall/> <hamextfingerol/> <hampalml/>
+    <hamlrbeside/> <hamshoulders/> <hamarmextended/>
+    <hamreplace/> <hamextfingerl/> <hampalml/>
+    <hamchest/> <hamclose/>
+  </hamnosys_manual>
+</hns_sign>
+
+<hns_sign gloss="i">
+  <hamnosys_nonmanual>
+    <hnm_mouthpicture picture="a_I"/>
+  </hamnosys_nonmanual>
+  <hamnosys_manual>
+    <hamfinger2/> <hamthumbacrossmod/>
+    <hamextfingeril/> <hampalmr/>
+    <hamchest/> <hamtouch/>
+  </hamnosys_manual>
+</hns_sign>
+
+</sigml>
 </textarea>
 
-<div class="undisplayed">
--->
-<!-- Animgen FPS -->
-<!--
-Let the Javascript initialisation set the selected FPS value, which should
-match that specified in the applet's "animgen.fps" parameter (above).
-The duplicated information in the value attributes is needed for IE 6,
-which doesn't follow the spec.
--->
-<!--
-FPS:&nbsp;
-<select class="fpsmenu" >
-	<option value="10">10</option>
-	<option value="25">25</option>
-	<option value="40">40</option>
-	<option value="50">50</option>
-	<option value="60">60</option>
-	<option value="100">100</option>
-</select>
-
-<br><br>
--->
-
-<!-- Logging checkbox -->
-<!-- initial setting ("checked") should match that of the applet argument
-     "do.spa.logging" -->
-<!--
-SPA Logging:&nbsp;
-<input type="checkbox" value="Log" class="chkLog" />
 <br>
-Log Dropped Frames:&nbsp;
-<input type="checkbox" value="DoLogDF" class="chkDoLogDroppedFrames" />
+New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
+<input id="myURL" class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
 
-<br><br>
+<br>
+<input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
+
+<hr/>
+<textarea id="myStatusLog"  class="statusLog" rows="6" >
+</textarea>
 
 </div>
 -->
-<!--class="undisplayed"-->
 
-<!-- Hidden SToCA applet element panel -->
+<!-- SToCA applet element panel -->
 <!--================================================================-->
 <div class="SToCA" align="center" ></div>
 <!--================================================================-->
 
-<p align="center" ><strong>NB See <a href="./index.html#conditions">Conditions of Use</a>.</strong></p>
-
-<small><em>JRWG &nbsp;&nbsp; 2016-03</em></small>
 </body>
-
 </html>
