--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 <body onload="CWASA.init();">
 
 <!--================================================================-->
-<h3>CoffeeScript WebGL ARP Signing Avatar with Animgen via JASigning: vhg.2020</h3>
-<h4>Test direct access to CWASA</h4>
+<h3>NGT Thesis test website</h3>
+<h4>Werkt het al?</h4>
 <hr/>
 
 <!-- CWA signing avatar panel 0 -->
