--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
-<link rel="stylesheet"
-    href="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/cwasa.css" />
+<link rel="stylesheet" type="text/css"
+    href="cwasa.css" />
 <script type="text/javascript"
     src="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/allcsa.js"></script>
 
