--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ Enter SiGML:<br>
 <br>
 <input type="button" value="Play" onclick='playText(document.getElementById("mySiGML").value);' />
 <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
+<br>
+<br>
+Adjust speed: <span class="CWASASpeed av0"></span>
 </div>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
