--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -58,10 +58,10 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 
 </script>
 
-<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 <script>
-//let scrapeJSON = 'http://bluegalaxy.info/cgi/scrapeJSON.py'
+let scrapeJSON = 'https://bluegalaxy.info/cgi/scrapeJSON.py'
 function goPython(text){
     $.ajax({
       type: "POST",
