--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -9,7 +9,7 @@
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
-<link rel="stylesheet" href="https://github.com/LykeEsselink/LykeEsselink.github.io/blob/master/Zonmw%20probeersels/cwasa.css">
+<link rel="stylesheet" href="/cwasa.css">
 <script type="text/javascript"
     src="https://github.com/LykeEsselink/LykeEsselink.github.io/blob/master/Zonmw%20probeersels/allcsa.js"></script>
 
