--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -9,9 +9,9 @@
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
-<link rel="stylesheet" href="https://github.com/LykeEsselink/LykeEsselink.github.io/blob/master/Zonmw%20probeersels/cwasa.css">
+<link rel="stylesheet" href="cwasa.css">
 <script type="text/javascript"
-    src="https://github.com/LykeEsselink/LykeEsselink.github.io/blob/master/Zonmw%20probeersels/allcsa.js"></script>
+    src="allcsa.js"></script>
 
 <script language="javascript">
 
@@ -58,10 +58,10 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 
 </script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
 
 <script>
-let scrapeJSON = 'https://bluegalaxy.info/cgi/scrapeJSON.py'
+// let scrapeJSON = 'https://bluegalaxy.info/cgi/scrapeJSON.py'
 function goPython(text){
     $.ajax({
       type: "POST",
