--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -10,8 +10,8 @@
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
 <link rel="stylesheet" href="cwasa.css">
-<script type="text/javascript"
-    src="allcsa.js"></script>
+<!-- <script type="text/javascript"
+    src="allcsa.js"></script> -->
 
 <script language="javascript">
 
