--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -15,19 +15,18 @@
 
 <script language="javascript">
 
-function playURL(surl) {
-	CWASA.playSiGMLURL(surl);
-}
+// function playURL(surl) {
+// 	CWASA.playSiGMLURL(surl);
+// }
 
-function playText(stext) {
-	CWASA.playSiGMLText(stext);
-}
+// function playText(stext) {
+// 	CWASA.playSiGMLText(stext);
+// }
 
 function callbackFunc(sigml){
   // do something with the response
   console.log(sigml);
 }
-
 
 function addStatus(evt) {
 	var elt = document.getElementById("myStatusLog");
@@ -58,7 +57,7 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 
 </script>
 
-<!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 <script>
 // let scrapeJSON = 'https://bluegalaxy.info/cgi/scrapeJSON.py'
@@ -67,7 +66,7 @@ function goPython(text){
       type: "POST",
       url: "/main.py",
       data: {param: text},
-     success: callbackFunc(data)
+      success: callbackFunc(data)
    });
 }
 
