--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -66,7 +66,7 @@ function goPython(text){
       type: "POST",
       url: "pythonCall.py",
       data: {param: text},
-      success: callbackFunc
+      alert('trying')
    });
 }
 
