--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -65,7 +65,7 @@ function goPython(text){
     $.ajax({
       type: "POST",
       url: "pythonCall.py",
-      data: {param: text},
+      data: {param: text}
       alert('trying')
    });
 }
