--- a/Zonmw probeersels/interface.html
+++ b/Zonmw probeersels/interface.html
@@ -66,7 +66,10 @@ function goPython(text){
       type: "POST",
       url: "pythonCall.py",
       data: {param: text}
-      alert('trying')
+      success: function(data) {
+        // to make sure that it gets the data
+        console.log(data);
+      }
    });
 }
 
