run python in browser

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function suggestions(text){
 
 </head>
 
-<body onload="CWASA.init(); brython();">
+<body onload="CWASA.init(); brython(1);">
 
 
 <!--================================================================-->
