--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ function suggestions(text){
 
   </script>
 
-<script type="text/javascript"
+<!-- <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython.min.js">
-</script>
+</script> -->
 
 <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython_stdlib.js">
