--- a/index.html
+++ b/index.html
@@ -113,13 +113,15 @@ function suggestions(text){
 
   </script>
 
-<script type="text/javascript"
+<!-- <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython.min.js">
 </script>
 
 <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython_stdlib.js">
-</script>
+</script> -->
+
+<script src="/brython.js"></script>
 
 </head>
 
