--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ function suggestions(text){
     src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython_stdlib.js">
 </script> -->
 
-<script src="/brython.js"></script>
+<script src="/static/brython.js"></script>
 
 </head>
 
