--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- <meta http-equiv="Access-Control-Allow-Methods" content="POST"> -->
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
-<link rel="stylesheet" href="../static/cwasa.css">
+<link rel="stylesheet" href="static/cwasa.css">
 <script type="text/javascript"
     src="http://vhg.cmp.uea.ac.uk/tech/jas/vhg2020/cwa/allcsa.js"></script>
 
@@ -121,7 +121,7 @@ function suggestions(text){
     src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython_stdlib.js">
 </script> -->
 
-<script src="/static/brython.js"></script>
+<script src="static/brython.js"></script>
 
 </head>
 
