--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ function suggestions(text){
 </script> -->
 
 <script src="static/brython.js"></script>
+<script src="static/brython_stdlib.js"></script>
+
 
 </head>
 
