--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ function suggestions(text){
 
 </head>
 
-<body onload="CWASA.init(); brython(1);">
-<!-- <body onload="brython()"> -->
+<!-- <body onload="CWASA.init(); brython(1);"> -->
+<body onload="brython(1);">
 
 
 <!--================================================================-->
