--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ def click(ev):
 document["echo"].bind("click", click)
 </script>
 <input id="zone">
-<button id="mybutton">click !</button>
+<button id="echo">click !</button>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
 <input id="myURL" class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
