--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@ Enter Sentence:<br>
 <br>
 Adjust speed: <span class="CWASASpeed av0"></span>
 </div>
-<script type="text/python">
-from browser import document
-from browser.widgets.dialog import InfoDialog
-
-def click(ev):
-    InfoDialog("Hello", f"Hello, {document['mySiGML'].value} !")
-
-# bind event 'click' on button to function echo
-document["play"].bind("click", click)
-</script>
+<script type="text/python" src="test.py"></script>
 <button id="echo">click !</button>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
