--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Enter Sentence:<br>
 <br>
 Adjust speed: <span class="CWASASpeed av0"></span>
 </div>
-<script type="text/python" src="/test.bry"></script>
+<script type="text/python" src="test.py"></script>
 <button id="echo">click !</button>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
