--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ def click(ev):
     InfoDialog("Hello", f"Hello, {document['mySiGML'].value} !")
 
 # bind event 'click' on button to function echo
-document["mySiGML"].bind("click", click)
+document["play"].bind("click", click)
 </script>
 <button id="echo">click !</button>
 
