--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ def click(ev):
 # bind event 'click' on button to function echo
 document["play"].bind("click", click)
 </script>
+<script type="text/python" src="test.py"></script>
 <button id="echo">click !</button>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
