--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ from browser import document
 from browser.widgets.dialog import InfoDialog
 
 def click(ev):
-    InfoDialog("Hello, Hi", f"Hello, {document['mySiGML'].value} !")
+    InfoDialog("Hello, H", f"Hello, {document['mySiGML'].value} !")
 
 # bind event 'click' on button to function echo
 document["play"].bind("click", click)
