testing program call

--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@ function suggestions(text){
 
 
 <div align="center">
-Enter Sentence:<br>
-<textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)">
+Enter Sentence:<br><!-- 
+<textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)"> -->
+<textarea id="mySiGML" class="txtaSiGMLText" rows="6">
 </textarea>
 
 <br>
