onlick event verwijdert

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@ Enter Sentence:<br><!--
 </textarea>
 
 <br>
-<input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' />
+<!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
+<input type="button" id = "play" value="Play"/>
 <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
 <br>
 <br>
