adding suggestions as divs to page

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@ Enter Sentence:<br><!--
 <textarea id="mySiGML" class="txtaSiGMLText" rows="6">
 </textarea>
 
+<div align="center" id="suggestions"></div>
+
 <br>
 <!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
 <input type="button" id = "play" value="Play"/>
