adding suggestions as divs to page

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Enter Sentence:<br><!--
 <textarea id="mySiGML" class="txtaSiGMLText" rows="6">
 </textarea>
 
-<td align="center" id="suggestions" style="text-align:center;"></td>
+<td id="suggestions" style="text-align:center;"></td>
 
 <br>
 <!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
