--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Enter Sentence:<br><!--
 <textarea id="mySiGML" class="txtaSiGMLText" rows="6">
 </textarea>
 
-<span id="suggestions" style="text-align:center;"></span>
+<div id="suggestions" class="suggestions" style="text-align:center;"></div>
 
 <br>
 <!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
