adding suggestions as divs to page

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Enter Sentence:<br><!--
 <br>
 Adjust speed: <span class="CWASASpeed av0"></span>
 </div>
-<script type="text/python">
+<!-- <script type="text/python">
 from browser import document
 from browser.widgets.dialog import InfoDialog
 
@@ -168,7 +168,7 @@ def click(ev):
 
 # bind event 'click' on button to function echo
 document["play"].bind("click", click)
-</script>
+</script> -->
 <script type="text/python" src="test.py"></script>
 <!-- <button id="echo">click !</button> -->
 
