adding suggestions as divs to page

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ def click(ev):
 document["play"].bind("click", click)
 </script> -->
 <script type="text/python" src="test.py"></script>
-<!-- <button id="echo">click !</button> -->
+<button id="echo">click !</button>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
 <input id="myURL" class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
