suggesties laten zien

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ function suggestions(text){
       node.appendChild(textnode); 
     }
   }
+  alert("hey");
   document.getElementById("suggestions").appendChild(node);
 
   // document.getElementById("mySiGML").value = 
