--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ function goPython(text){
 
 function suggestions(text){
   var node = document.getElementById("suggestions")
-  for (o in options){
-    alert(o)
-    if (o.includes(text)) {
+  var arrayLength = options.length;
+  for (var i = 0; i < arrayLength; i++){
+    if (options[i].includes(text)) {
       alert("hello");
       var textnode = document.createTextNode(o); 
       node.appendChild(textnode); 
