--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function suggestions(text){
   for (var i = 0; i < arrayLength; i++){
     if (options[i].includes(text)) {
       alert("hello");
-      var textnode = document.createTextNode(o); 
+      var textnode = document.createTextNode(options[i]); 
       node.appendChild(textnode); 
     }
   }
