--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function suggestions(text){
   var arrayLength = options.length;
   for (var i = 0; i < arrayLength; i++){
     if (options[i].includes(text)) {
-      alert("hello");
+      alert(options[i]);
       var textnode = document.createTextNode(options[i]); 
       node.appendChild(textnode); 
     }
