--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ function suggestions(text){
 
 <div align="center">
 Enter Sentence:<br>
-<!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"> -->
-<textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)">
+<textarea id="mySiGML" class="txtaSiGMLText" rows="6">
+<!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)"> -->
 </textarea>
 
 <div id="suggestions" class="suggestions" style="text-align:center;"></div>
@@ -183,7 +183,7 @@ def click(ev):
 document["play"].bind("click", click)
 </script> -->
 <script type="text/python" src="test.py"></script>
-<button id="echo">click !</button>
+<button id="echo" onclick="suggestions(this.value)">click !</button>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
 <input id="myURL" class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
