--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ function suggestions(text){
   var arrayLength = options.length;
   for (var i = 0; i < arrayLength; i++){
     if (options[i].includes(text) == true) {
+      alert(options[i].includes(text));
       var newNode = document.createElement('li');
       alert(options[i]);
       var textnode = document.createTextNode(options[i]); 
