--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ function suggestions(text){
   for (var i = 0; i < arrayLength; i++){
     if (options[i].includes(text) == true) {
       alert(options[i].includes(text));
+      alert(text);
       var newNode = document.createElement('li');
       alert(options[i]);
       var textnode = document.createTextNode(options[i]); 
