suggesties laten zien

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ def click(ev):
 document["play"].bind("click", click)
 </script> -->
 <script type="text/python" src="test.py"></script>
-<button id="echo" onclick="suggestions(this.value)">click !</button>
+<button id="echo" onclick='suggestions(document.getElementById("mySiGML".value);'>click !</button>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
 <input id="myURL" class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
