--- a/index.html
+++ b/index.html
@@ -84,15 +84,12 @@ function suggestions(text){
   var arrayLength = options.length;
   for (var i = 0; i < arrayLength; i++){
     if (options[i].includes(text) == true) {
-      // alert(options[i].includes(text));
-      var newNode = document.createElement('li');
-      // alert(options[i]);
+      var newNode = document.createElement('div');
       var textnode = document.createTextNode(options[i]); 
       newNode.appendChild(textnode); 
       node.appendChild(newNode); 
     }
   }
-  alert("hey");
 
 
   // document.getElementById("mySiGML").value = 
