--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@ function suggestions(text){
 
 <div align="center">
 Enter Sentence:<br>
-<!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)"> -->
-<textarea id="mySiGML" class="txtaSiGMLText" rows="6">
+<!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"> -->
+<textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)">
 </textarea>
 
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul>
