suggesties laten zien

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function goPython(text){
 
 function suggestions(text){
   alert(text)
-  document.getElementById(suggestions).innerHTML = "";
+  document.getElementById("suggestions").innerHTML = "";
   var node = document.getElementById("suggestions");
   var arrayLength = options.length;
   for (var i = 0; i < arrayLength; i++){
