--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@ function suggestions(text){
   document.getElementById("suggestions").innerHTML = "";
   var node = document.getElementById("suggestions");
   var arrayLength = options.length;
+  node.setAttribute("suggestionsList");
   for (var i = 0; i < arrayLength; i++){
     if (options[i].includes(text) == true) {
       var newNode = document.createElement('div');
+      newNode.setAttribute("id");
       var textnode = document.createTextNode(options[i]); 
       newNode.appendChild(textnode);  
       node.appendChild(newNode);
