--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ function suggestions(text){
 <div align="center">
 Enter Sentence:<br>
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"> -->
-<textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)">
+<textarea id="mySiGML" rows="6" oninput="suggestions(this.value)">
 </textarea>
 
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul>
