--- a/index.html
+++ b/index.html
@@ -86,16 +86,14 @@ function suggestions(text){
   // node.setAttribute("suggestionsList","");
   for (var i = 0; i < arrayLength; i++){
     if (options[i].includes(text) == true) {
-      var newNode = document.createElement('div');
-      /*insert a input field that will hold the current array item's value:*/
-      newNode.innerHTML += "<input type='hidden' value='" + options[i] + "'>";
-      // newNode.setAttribute("suggestion","");
-      // var textnode = document.createTextNode(options[i]); 
-      // newNode.appendChild(textnode);
+      var newNode = document.createElement('li');
+      newNode.setAttribute("value",options[i]);
+      var textnode = document.createTextNode(options[i]); 
+      newNode.appendChild(textnode);
       // newNode.value = options[i];
       newNode.addEventListener("click", function(e){
         /*insert the value for the autocomplete text field:*/
-        document.getElementById("mySiGML").value = this.getElementsByTagName("input")[0].value;
+        document.getElementById("mySiGML").value = newNode.value;
       });
       node.appendChild(newNode);
     }
