--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- <meta http-equiv="Access-Control-Allow-Methods" content="POST"> -->
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
-<link rel="stylesheet" href="static/cwasa.css">
+<link rel="stylesheet" href="https://lykeesselink.github.io/cwasa/uva2020/cwa/cwasa.css">
 <script type="text/javascript"
     src="https://lykeesselink.github.io/cwasa/uva2020/cwa/allcsa.js"></script>
 
