--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
 <link rel="stylesheet" href="static/cwasa.css">
 <script type="text/javascript"
-    src="https://lykeesselink.github.io/cwasa/uva2020/cwa/allcsa.js"></script>
+    src="cwa/allcsa.js"></script>
 
 <script language="javascript">
 
