suggesties via bootstrap

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ function suggestions(text){
 <script src="static/brython.js"></script>
 <script src="static/brython_stdlib.js"></script>
 
-<script src="bootstrap-autocomplete.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.6/dist/latest/bootstrap-autocomplete.min.js"></script>
 </head>
 
 <!-- <body onload="CWASA.init(); brython(1);"> -->
