--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 </script>
 
 <!-- <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
+<link href="http://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet"></link>
 <script type="text/javascript" src="../static/jquery-3.5.1.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
 <script>
 // let scrapeJSON = 'http://bluegalaxy.info/cgi/scrapeJSON.py'
@@ -155,7 +157,6 @@ function suggestions(text){
 
 <!-- <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.6/dist/latest/bootstrap-autocomplete.min.js"></script> -->
 
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
 
 <!-- <body onload="CWASA.init(); brython(1);"> -->
