suggesties via jquery

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ function suggestions(text){
 
 
 <div align="center">
-Enter Sentence:<br>
+<!-- Enter Sentence:<br> -->
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"> -->
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)">
 </textarea>
@@ -201,7 +201,7 @@ Enter Sentence:<br>
 </div> -->
 <!-- <input class="form-control basicAutoComplete" type="text" autocomplete="off"> -->
 
-<label for="autocomplete">Select a programming language: </label>
+<label for="autocomplete">Enter Sentence:</label>
 <input id="autocomplete">
 
 <br>
