--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
-<link rel="stylesheet" href="static/cwasa.css">
+<!-- <link rel="stylesheet" href="static/cwasa.css"> -->
 <script type="text/javascript"
     src="cwa/allcsa.js"></script>
 
